[package]
name = "bid"
version = "0.1.0"
authors = ["Jules de Smit <julesdesmit@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dusk-abi = { git = "https://github.com/dusk-network/dusk-abi", default-features = false }
phoenix-abi = { git = "https://github.com/dusk-network/phoenix-abi", default-features = false }
dataview = { git = "https://github.com/dusk-network/dataview" }
cake-rusk = { git = "https://github.com/dusk-network/cake-rusk" }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
